<resources>
    <string name="app_name">ParkU</string>

    <!-- Introduction view -->
    <string name="str_step1_view">Step 1</string>
    <string name="str_step2_view">Step 2</string>
    <string name="str_step3_view">Step 3</string>
    <string name="str_login">Login</string>

    <!-- Login view -->
    <string name="str_login_username">Username</string>
    <string name="str_login_password">Password</string>
    <string name="str_login_button">Login</string>
    <string name="str_signup_button">Signup</string>
    <string name="str_askAccount_textview">Don\u0027t have account ?</string>
    <string name="str_signup">Signup</string>

    <!-- Signup view -->
    <string name="str_firstname">First Name</string>
    <string name="str_lastname">Last Name</string>
    <string name="str_email">Email</string>
    <string name="str_contact">Contact Number</string>
    <string name="str_signup_username">Username</string>
    <string name="str_signup_password">Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_submit">Submit</string>
    <string name="str_signup_textview">Sign Up</string>

    <!-- HomePage view -->
    <string name="str_header">Welcome User</string>


    <!-- Drawer content -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settingss">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="about_fragment">About</string>
    <string name="settings_fragment">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_main_application">Map</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_app_preferences">AppPreferences</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>


</resources>
