<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/login_background"
    tools:context=".view.SignupActivity"
    tools:showIn="@layout/activity_signup">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_firstName"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/firstName_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_firstname"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lastName"
        android:layout_marginTop="85dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/lastName_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_lastname"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_marginTop="135dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_email"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_contact"
        android:layout_marginTop="185dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/contact_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_contact"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_signupUsername"
        android:layout_marginTop="235dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/signupUsername_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_signup_username"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_signupPassword"
        android:layout_marginTop="285dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/signupPassword_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_signup_password"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Cpassword"
        android:layout_marginTop="335dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorInputTxt">

        <EditText
            android:id="@+id/confirmPassword_editText"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:hint="@string/str_confirm_password"
            android:layout_marginLeft="35dp"
            android:backgroundTint="@color/etBgTint"
            android:textColor="@color/colorInputTxt"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="168dp"
        android:layout_height="35dp"
        android:text="@string/str_submit"
        android:textColor="#FFFFFF"
        android:background="@color/signupButton"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/signup_logo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_signup_textview"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_marginLeft="42dp"
        android:textStyle="bold" />


</RelativeLayout>
