<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.LoginActivity"
    tools:showIn="@layout/activity_login">

   <ImageView
       android:id="@+id/login_header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/login_header"
       android:adjustViewBounds="true"
       android:scaleType="fitCenter"
       />

    <LinearLayout
        android:id="@+id/linearUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/login_header">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/login_password_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/etBgTint">

            <EditText
                android:id="@+id/username_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/str_login_username"
                android:backgroundTint="@color/etBgTint"
                android:textColor="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearUsername">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:src="@drawable/login_username_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/etBgTint">

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/str_login_password"
                android:backgroundTint="@color/etBgTint"
                android:password="true"
                android:textColor="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/linearPassword">
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:background="@color/loginButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:layout_below="@id/linearLoginButton">
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_askAccount_textview"
            android:textColor="@color/etBgTint"
            android:layout_weight="1.1"
            android:textSize="15sp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_signup"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/etBgTint"
            android:layout_weight="2.8" />
    </LinearLayout>
    <ImageView
        android:id="@+id/instruction_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/login_instruction_icon"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>



</RelativeLayout>
